--- a/styles/themes.css
+++ b/styles/themes.css
@@ -4,3 +4,79 @@
 ✦ theme-light — класс светлой темы
 ✦ не забудьте описать стили для изменения темы через медизапрос пользовательских предпочтений
 */
+
+:root.theme-dark {
+  --accent-color: #00cc14;
+  --bg-color: #000;
+  --text-wght: 465;
+  --title-wght: 785;
+  --bg-img: repeating-linear-gradient(
+      to left,
+      transparent,
+      transparent 2px,
+      #000 2px 4px
+    ),
+    repeating-linear-gradient(to bottom, #000, #000 2px, transparent 2px 4px),
+    linear-gradient(to bottom, #007f0c, #004306);
+}
+
+:root.theme-light {
+  --accent-color: #000;
+  --bg-color: #fff;
+  --text-wght: 400;
+  --title-wght: 700;
+  --bg-img: repeating-linear-gradient(
+      to left,
+      transparent,
+      transparent 2px,
+      #d3d3d3 2px 4px
+    ),
+    repeating-linear-gradient(
+      to bottom,
+      #d3d3d3,
+      #d3d3d3 2px,
+      transparent 2px 4px
+    ),
+    linear-gradient(to bottom, #e7e7e7 0.01%, #1a1a1a);
+}
+
+@media (prefers-color-scheme: light) {
+
+  :root {
+    --accent-color: #000;
+    --bg-color: #fff;
+    --text-wght: 400;
+    --title-wght: 700;
+    --bg-img: repeating-linear-gradient(
+        to left,
+        transparent,
+        transparent 2px,
+        #d3d3d3 2px 4px
+      ),
+      repeating-linear-gradient(
+        to bottom,
+        #d3d3d3,
+        #d3d3d3 2px,
+        transparent 2px 4px
+      ),
+      linear-gradient(to bottom, #e7e7e7 0.01%, #1a1a1a);
+  }
+}
+
+@media (prefers-color-scheme: dark) {
+
+  :root {
+    --accent-color: #00cc14;
+    --bg-color: #000;
+    --text-wght: 465;
+    --title-wght: 785;
+    --bg-img: repeating-linear-gradient(
+        to left,
+        transparent,
+        transparent 2px,
+        #000 2px 4px
+      ),
+      repeating-linear-gradient(to bottom, #000, #000 2px, transparent 2px 4px),
+      linear-gradient(to bottom, #007f0c, #004306);
+  }
+}
