--- a/styles/variables.css
+++ b/styles/variables.css
@@ -1,1 +1,11 @@
 /* В этом файле будут храниться все значения переменных в исходном состоянии, а так же их изменения в зависимости от ширины устройства */
+:root {
+  --main-font: "Inter-Variable";
+  --accent-font: "PressStart2P";
+  --text-wght: 400;
+  --title-wght: 700;
+  --accent-color: #000;
+  --bg-color: #fff;
+  --heart-color: #f00;
+  --border: 2px solid var(--accent-color, #000);
+}
