--- a/fonts/fonts.css
+++ b/fonts/fonts.css
@@ -5,8 +5,8 @@
   font-family: "Inter-Variable";
   src:
     local("Inter-Variable"),
-    url(../fonts/Inter-Variable.woff2) format("woff2 supports variations"),
-    url(../fonts/Inter-Variable.woff2) format("woff2-variations");
+    url(Inter-Variable.woff2) format("woff2 supports variations"),
+    url(Inter-Variable.woff2) format("woff2-variations");
   font-weight: 400 785;
 }
 
@@ -14,7 +14,7 @@
   font-display: swap;
   font-family: "PressStart2P";
   src:
-    url(../fonts/PressStart2P-Regular.ttf) format("ttf"),
-    url(../fonts/PressStart2P-Regular.woff) format("woff");
+    url(PressStart2P-Regular.ttf) format("ttf"),
+    url(PressStart2P-Regular.woff) format("woff");
   font-weight: 400;
 }
