--- a/styles/style.css
+++ b/styles/style.css
@@ -26,21 +26,6 @@
   margin: auto;
 }
 
-.button {
-  appearance: none;
-  background-color: var(--bg-color);
-  border: transparent;
-  font-family: var(--accent-font, "PressStart2P"), monospace;
-  font-size: 0.875rem;
-  position: relative;
-  cursor: pointer;
-}
-
-.button:focus {
-  appearance: none;
-  outline: none;
-}
-
 .content {
   margin-inline: auto;
   display: flex;
@@ -52,20 +37,71 @@
   font-family: var(--main-font, "Inter-Variable"), sans-serif;
 }
 
+button {
+  appearance: none;
+  outline: none;
+  position: relative;
+  display: flex;
+  justify-content: center;
+  align-items: center;
+  gap: 0.5rem;
+  background-color: var(--bg-color);
+  border: 2px solid transparent;
+  font-family: var(--accent-font, "PressStart2P"), fantasy;
+  font-size: 0.875rem;
+  cursor: pointer;
+}
+
+.button:has(.button__text) {
+  min-width: 8.2rem;
+  border: var(--border);
+  z-index: 1;
+  color: var(--button-color);
+}
+
+.button:has(.button__text)::before {
+  content: "";
+  position: absolute;
+  z-index: -1;
+  inset: 0;
+  display: block;
+  height: 100%;
+  width: 100%;
+  background-color: var(--accent-color);
+  transform: scaleX(0);
+  transform-origin: 0;
+  transition:
+    transform 0.5s ease-in-out,
+    box-shadow 0.3s ease;
+}
+
+.button:has(.button__text):hover::before {
+  transform: scaleX(1);
+}
+
+.button:has(.button__text):focus-visible {
+  box-shadow: 2px 2px 0 0 var(--accent-color);
+}
+
+.button:has(.button__text) .button__text {
+  mix-blend-mode: difference;
+}
+
 .header {
   margin-block: 6.25rem;
   padding-block-start: 8.5rem;
   align-items: center;
-  font-family: var(--accent-font, "PressStart2P"), monospace;
+  font-family: var(--accent-font, "PressStart2P"), fantasy;
   text-transform: uppercase;
 }
 
-.header__title {
+.header__logo {
   margin-block-end: 1.25rem;
   font-size: clamp(3.0625rem, 2.7104rem + 1.5023vw, 4.0625rem);
+  display: block;
 }
 
-.header__subtitle {
+.header__title {
   font-size: clamp(0.875rem, 0.6769rem + 0.8451vw, 1.4375rem);
 }
 
@@ -85,37 +121,16 @@
   transform: translateX(0.56rem);
 }
 
-.theme-menu__button::after {
-  content: "";
-  display: block;
-  position: absolute;
-  width: 0;
-  height: 2px;
-  margin-top: 1px;
-  opacity: 0.6;
-  background-color: var(--accent-color);
-  transition: width 0.3s;
-}
-
 .theme-menu__button {
   width: fit-content;
-  cursor: pointer;
   transition:
     opacity 0.3s ease,
     transform 0.3s ease;
   text-transform: uppercase;
 }
 
-.theme-menu__button:focus {
-  appearance: none;
-  outline: none;
+.theme-menu__button:focus-visible {
   opacity: 0.6;
-}
-
-.theme-menu__button:focus-visible:after {
-  appearance: none;
-  outline: none;
-  width: 100%;
 }
 
 .theme-menu__button:hover {
@@ -131,22 +146,27 @@
   content: "▶";
   position: absolute;
   inset-inline-start: -1.24rem;
-  animation: arrow 1s infinite ease-in-out;
+  inset-block: 0;
+  animation: arrow 0.5s infinite alternate ease-in-out;
+  mix-blend-mode: hard-light;
 }
 
-@keyframes arrow {
+.theme-menu__button::after {
+  content: "";
+  display: block;
+  position: absolute;
+  scale: 0;
+  height: 2px;
+  width: 100%;
+  inset-block-end: -1px;
+  opacity: 0.6;
+  background-color: var(--accent-color);
+  transform-origin: 0;
+  transition: scale 0.3s ease;
+}
 
-  from {
-    transform: translateX(0);
-  }
-
-  50% {
-    transform: translateX(0.25rem);
-  }
-
-  to {
-    transform: translateX(0);
-  }
+.theme-menu__button:focus-visible:after {
+  scale: 1;
 }
 
 .card {
@@ -167,17 +187,18 @@
 
 .card__label {
   position: absolute;
+  mix-blend-mode: hard-light;
   z-index: 2;
+  inset-block-start: 0;
   inset-inline-end: 0;
   margin: 1.55rem;
-  font-family: var(--accent-font, "PressStart2P"), monospace;
+  font-family: var(--accent-font, "PressStart2P"), fantasy;
   font-size: 0.88rem;
   text-shadow:
     -1px 0 var(--bg-color),
     0 1px var(--bg-color),
     1px 0 var(--bg-color),
     0 -1px var(--bg-color);
-  mix-blend-mode: hard-light;
   opacity: 0.5;
 }
 
@@ -195,55 +216,39 @@
   inline-size: 100%;
   object-fit: cover;
   object-position: center;
+  aspect-ratio: 1 / 1;
 }
 
-.cards__list-item:nth-child(1) .card__image {
-  filter: contrast(1.2);
+.filter-color-change {
+  animation: color-chahge 2s infinite linear;
 }
 
-.cards__list-item:nth-child(2) .card__image {
-  filter: sepia(0.23) brightness(0.7) saturate(2);
-}
-
-.cards__list-item:nth-child(3) .card__image {
+.filter-sepia {
   filter: sepia(0.3);
-  animation: gamma 2s infinite linear;
 }
 
-@keyframes gamma {
-
-  0% {
-    filter: hue-rotate(0deg);
-  }
-
-  50% {
-    filter: hue-rotate(180deg);
-  }
-
-  100% {
-    filter: hue-rotate(360deg);
-  }
+.filter-contrast {
+  filter: contrast(1.1) brightness(1.1);
 }
 
-.cards__list-item:nth-child(4) .card__image {
-  filter: hue-rotate(25deg) saturate(1.4);
+.filter-brightness {
+  filter: brightness(1.1);
 }
 
-.cards__list-item:nth-child(5) .card__image {
+.filter-darkness {
+  filter: brightness(0.6) contrast(1.1) hue-rotate(-20deg);
+}
+
+.filter-hue-rotate {
   filter: hue-rotate(-15deg);
 }
 
-.cards__list-item:nth-child(6) .card__image {
+.filter-hue-rotate-right {
+  filter: hue-rotate(25deg);
+}
+
+.filter-saturate {
   filter: saturate(1.6);
-}
-
-.cards__list-item:nth-child(7) .card__image {
-  filter: brightness(1.1) hue-rotate(-15deg) sepia(0.3);
-}
-
-.cards__list-item:nth-child(8) .card__image {
-  filter: brightness(0.95) contrast(1.1);
-  transform: rotateY(180deg);
 }
 
 .card__text {
@@ -264,172 +269,40 @@
   gap: 0.25rem;
 }
 
-.card__icon-button {
-  border: 2px solid transparent;
-}
-
 .card__icon-button:focus-visible {
   border: var(--border);
   transition: border 0.3s;
-}
-
-.contour {
-  fill: var(--accent-color);
-  transition: fill 0.1s linear;
-}
-
-.core {
-  fill: transparent;
-  transition: fill 0.3s 0.03s;
-}
-
-.main-body {
-  fill: transparent;
-  transition: fill 0.3s;
 }
 
 .sparks {
   opacity: 0;
 }
 
-.card__icon-button:hover .core {
-  fill: var(--accent-color);
-  transition: fill 0.3s;
-}
-
-.card__icon-button:active .core {
-  fill: var(--heart-color);
-  transition: fill 0.3s;
-}
-
-.card__icon-button:hover .main-body {
-  fill: var(--accent-color);
-  transition: fill 0.3s 0.05s;
-}
-
-.card__icon-button:active .main-body {
-  fill: var(--heart-color);
-  transition: fill 0.3s 0.05s;
-}
-
-.like-icon.is-liked .core {
-  fill: var(--heart-color);
-  transition: fill 0.3s;
-}
-
-.like-icon.is-liked .main-body {
-  fill: var(--heart-color);
-  transition: fill 0.3s 0.06s;
-}
-
-.like-icon.is-liked .contour {
-  fill: var(--heart-color);
-  transition: fill 0.3s 0.06s;
-}
-
-.like-icon.is-liked .heart {
-  animation: liked 0.3s 0.1s ease-in;
-  transform-origin: center;
-}
-
-@keyframes liked {
-
-  from {
-    scale: 1;
-  }
-
-  50% {
-    scale: 1.5;
-  }
-
-  to {
-    scale: 1;
-  }
-}
-
-.like-icon.is-liked .sparks {
-  animation: sparking 0.3s 0.3s ease-in;
-}
-
-@keyframes sparking {
-
-  from {
-    opacity: 0;
-  }
-
-  50% {
-    opacity: 1;
-  }
-
-  to {
-    opacity: 0;
-  }
-}
-
-.button__text {
-  position: relative;
+.card__like-button {
   padding-block: 0.66rem;
-  min-width: 8.2rem;
-  border: var(--border);
-  z-index: 1;
-  display: flex;
-  justify-content: center;
-  align-items: center;
-  gap: 0.5rem;
-  background-color: transparent;
-  color: var(--accent-color);
-  transition: color 0.5s 0.5s;
-}
-
-.button__text::before {
-  content: "";
-  position: absolute;
-  z-index: -1;
-  inset: 0;
-  display: block;
-  height: 100%;
-  width: 100%;
-  background-color: var(--accent-color);
-  transform: scaleX(0);
-  transform-origin: 0;
-  transition: transform 0.5s ease-in-out;
 }
 
 .save-button {
-  display: block;
   margin-block: 3.07rem 6.2rem;
   margin-inline: auto;
-}
-
-.save-button .button__text {
-  padding: 0.9rem 1.3rem;
-}
-
-.button:hover .button__text {
-  color: var(--bg-color);
-}
-
-.button:hover .button__text::before {
-  transform: scaleX(1);
-}
-
-.card__like-button:focus-visible,
-.save-button:focus-visible {
-  box-shadow: 2px 2px 0 0 var(--accent-color);
-  transition: box-shadow 0.3s ease;
+  padding-block: 1rem;
+  padding-inline: 1.3rem;
 }
 
 .floppy {
   display: inline-block;
+  color: var(--button-color);
+  mix-blend-mode: difference;
+  aspect-ratio: 1 / 1;
   width: 1.313rem;
-  height: 1.313rem;
 }
 
 .dialog[open] {
   display: grid;
-  grid-template-columns: 2.44rem 14.625rem;
+  grid-template-columns: 2.44rem 1fr;
   grid-auto-rows: auto;
   align-items: center;
+  width: 22.31rem;
   margin: auto;
   padding: 1.825rem;
   gap: 1.8rem;
@@ -444,7 +317,6 @@
 
 .dialog .floppy {
   width: 2.44rem;
-  height: 2.44rem;
 }
 
 .dialog__text {
@@ -452,7 +324,7 @@
   gap: 1.25rem;
   font-size: 0.88rem;
   line-height: 1.5;
-  font-family: var(--accent-font, "PressStart2P"), monospace;
+  font-family: var(--accent-font, "PressStart2P"), fantasy;
   text-transform: uppercase;
 }
 
@@ -461,14 +333,13 @@
 }
 
 @media (width < 376px) {
-
+  
   .content {
     inline-size: 100%;
   }
 
   .header {
     padding-block-start: 7.5rem;
-    font-variation-settings: "wght" 400;
   }
 
   .card__title {
@@ -479,16 +350,13 @@
     margin: 1.45em 0.68rem;
   }
 
-  .button__text {
+  .save-button {
     flex-direction: column;
+    gap: 0.5rem;
+    padding-block: 1rem;
   }
 
   .floppy {
     width: 1.75rem;
-    height: 1.75rem;
-  }
-
-  .dialog[open] {
-    grid-template-columns: 2.44rem 1fr;
   }
 }
