--- a/styles/style.css
+++ b/styles/style.css
@@ -221,12 +221,12 @@ button {
   aspect-ratio: 1 / 1;
 }
 
-.filter-color-change {
+.animation-color-change {
   animation: color-chahge 2s infinite linear;
 }
 
 .filter-sepia {
-  filter: sepia(0.3);
+  filter: sepia(0.2);
 }
 
 .filter-contrast {
@@ -234,19 +234,19 @@ button {
 }
 
 .filter-brightness {
-  filter: brightness(1.1);
+  filter: brightness(1.1) saturate(1.2);
 }
 
 .filter-darkness {
   filter: brightness(0.6) contrast(1.1) hue-rotate(-20deg);
 }
 
-.filter-hue-rotate {
+.filter-hue-rotate-left {
   filter: hue-rotate(-15deg);
 }
 
 .filter-hue-rotate-right {
-  filter: hue-rotate(25deg);
+  filter: hue-rotate(20deg) saturate(1.2);
 }
 
 .filter-saturate {
